# WGPU_examples

wasm_example1/: README.md  test.html  test1.html
wasm_example1/src/: lib.rs  main.rs
wasm_example2/: Cargo.toml  build.sh  test2.html
wasm_example2/src/: lib.rs  main.rs
wasm_example3/: Cargo.toml  LICENSE_MIT
wasm_example3/src/: execute_gpu.rs  lib.rs
wasm_example4/: index.js  package-lock.json  package.json
wasm_example5/: index.js
wasm_examples/: Cargo.toml  build.sh
wasm_examples/src/: lib.rs  main.rs
