[package]
name = "wasm_example3"
version = "0.1.0"
authors = ["Jaehun Kim <jaehunkim@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.45"

bytemuck = { version = "1.19", features = ["derive"] }
flume = "0.11"
pollster = "0.3"
fern = "0.6"
wasm-logger = "0.2.0"

console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
log = "0.4.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
